@@ -104,7 +104,8 @@ $tpl->assign(
 			'TR_MESSAGE' => tr('Message'),
 			'TR_SENDER_EMAIL' => tr('Senders email'),
 			'TR_SENDER_NAME' => tr('Senders name'),
-			'TR_APPLY_CHANGES' => tr('Apply changes')
+			'TR_APPLY_CHANGES' => tr('Apply changes'),
+			'TR_BASE_SERVER_VHOST' => tr('URL to this admin panel')
 			)
 		);
 
